add bootstrap navbar

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,19 @@
-<p>
-  navbar works!
-</p>
+<div class="navbar">
+    <a class="navbar-brand" href="#">Property Listings</a>
+    <ul class="nav navbar-nav navbar-left">
+        <li class="active">
+            <a href="#">Listings</a>
+        </li>
+        <li>
+            <a href="#">Add Listing</a>
+        </li>
+    </ul>
+    <ul class="nav navbar-nav navbar-right">
+        <li class="active">
+            <a href="#">Login</a>
+        </li>
+        <li>
+            <a href="#">Logout</a>
+        </li>
+    </ul>
+</div>
