--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 <div class="navbar">
-    <a class="navbar-brand" href="#">Property Listings</a>
+    <a class="navbar-brand" [routerLink]="['/']">Property Listings</a>
     <ul class="nav navbar-nav navbar-left">
         <li class="active">
-            <a href="#">Listings</a>
+            <a [routerLink]="['/listings']">Listings</a>
         </li>
         <li>
-            <a href="#">Add Listing</a>
+            <a [routerLink]="['/add-listing']">Add Listing</a>
         </li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
