--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,19 +1,21 @@
-<div class="navbar">
-    <a class="navbar-brand" [routerLink]="['/']">Property Listings</a>
-    <ul class="nav navbar-nav navbar-left">
-        <li class="active">
-            <a [routerLink]="['/listings']">Listings</a>
-        </li>
-        <li>
-            <a [routerLink]="['/add-listing']">Add Listing</a>
-        </li>
-    </ul>
-    <ul class="nav navbar-nav navbar-right">
-        <li class="active">
-            <a href="#">Login</a>
-        </li>
-        <li>
-            <a href="#">Logout</a>
-        </li>
-    </ul>
+<div class="container">
+    <div class="navbar">
+        <a class="navbar-brand" [routerLink]="['/']">Property Listings</a>
+        <ul class="nav navbar-nav navbar-left">
+            <li class="active">
+                <a [routerLink]="['/listings']">Listings</a>
+            </li>
+            <li>
+                <a [routerLink]="['/add-listing']">Add Listing</a>
+            </li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+            <li class="active">
+                <a href="#">Login</a>
+            </li>
+            <li>
+                <a href="#">Logout</a>
+            </li>
+        </ul>
+    </div>
 </div>
