--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,19 +2,19 @@
     <div class="navbar">
         <a class="navbar-brand" [routerLink]="['/']">Property Listings</a>
         <ul class="nav navbar-nav navbar-left">
-            <li class="active">
+            <li *ngIf="(af.auth | async) class="active">
                 <a [routerLink]="['/listings']">Listings</a>
             </li>
-            <li>
+            <li *ngIf="(af.auth | async)>
                 <a [routerLink]="['/add-listing']">Add Listing</a>
             </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li class="active">
-                <a href="#">Login</a>
+            <li *ngIf="!(af.auth | async)">
+                <a (click)="login()">Login</a>
             </li>
-            <li>
-                <a href="#">Logout</a>
+            <li *ngIf="(af.auth | async)">
+                <a (click)="logout()">Logout</a>
             </li>
         </ul>
     </div>
