--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,10 +2,10 @@
     <div class="navbar">
         <a class="navbar-brand" [routerLink]="['/']">Property Listings</a>
         <ul class="nav navbar-nav navbar-left">
-            <li *ngIf="(af.auth | async) class="active">
+            <li *ngIf="(af.auth | async)" class="active">
                 <a [routerLink]="['/listings']">Listings</a>
             </li>
-            <li *ngIf="(af.auth | async)>
+            <li *ngIf="(af.auth | async)" >
                 <a [routerLink]="['/add-listing']">Add Listing</a>
             </li>
         </ul>
