display data to list group

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,8 @@
-<p>
-  home works!
-</p>
+<div class="jumbotron">
+	<div class="container text-center">
+		<h1>Welcome to Property Listings</h1>
+		<h3>Find properties in all prices.</h3>
+		<hr>
+		<button type="button" class="btn btn-success">Sign in with Google</button>
+	</div>
+</div>
