--- a/src/app/components/listings/listings.component.html
+++ b/src/app/components/listings/listings.component.html
@@ -1,3 +1,7 @@
-<p>
-  listings works!
-</p>
+<div class="container">
+	<ul class="list-group">
+		<li class="list-group-item" *ngFor="let listing of listings">
+			<a [routerLink]="['/listing/'+listing.$key]">{{listing.title}}</a>
+		</li>
+	</ul>
+</div>
