--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,6 +3,6 @@
 		<h1>Welcome to Property Listings</h1>
 		<h3>Find properties in all prices.</h3>
 		<hr>
-		<button type="button" class="btn btn-success">Sign in with Google</button>
+		<a type="button" class="btn btn-success" (click)="login()">Sign in with Google</a>
 	</div>
 </div>
