--- a/src/app/components/listing/listing.component.html
+++ b/src/app/components/listing/listing.component.html
@@ -1,3 +1,17 @@
-<p>
-  listing works!
-</p>
+<div class="container">
+<a class="btn btn-default" [routerLink]="['/listings']">Back to listings</a>
+	<h2 class="text-center">{{ listing.title }} <small>{{ listing.city }}</small></h2>
+	<hr>
+	<div class="row">
+		<div class="col-md-6">
+			<!-- put image here -->
+		</div>
+		<div class="col-md-6">
+			<ul class="list-group">
+				<li class="list-group-item">Rooms: {{listing.bedrooms}}</li>
+				<li class="list-group-item">Owned by: {{listing.owner}}</li>
+				<li class="list-group-item">Price: {{listing.price}}</li>
+			</ul>
+		</div>
+	</div>
+</div>
