--- a/src/app/components/add-listing/add-listing.component.html
+++ b/src/app/components/add-listing/add-listing.component.html
@@ -1,3 +1,38 @@
-<p>
-  add-listing works!
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-5 col-md-offset-3">
+            <form>
+                <legend>Add listing</legend>
+                <div class="form-group">
+                    <label for="">Title</label>
+                    <input type="text" class="form-control" name="title" id="title" placeholder="Input title" required>
+                </div>
+                <div class="form-group">
+                    <label for="">City</label>
+                    <input type="text" class="form-control" name="city" id="city" placeholder="Input city" required>
+                </div>
+                <div class="form-group">
+                    <label for="">Owner</label>
+                    <input type="text" class="form-control" name="owner" id="owner" placeholder="Input owner" required>
+                </div>
+                <div class="form-group">
+                    <label for="">Type</label>
+                    <select name="type" id="inputType" class="form-control" required="required">
+                        <option value="">Estate</option>
+                        <option value="">Condo</option>
+                        <option value="">Apartment</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="">Price</label>
+                    <input type="text" class="form-control" name="price" id="price" placeholder="Input price" required>
+                </div>
+                <div class="form-group">
+                    <label for="">Image</label>
+                    <input type="file" class="form-control" name="image" id="image" placeholder="Input image" required>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </div>
+</div>
