set up firebase storage for image upload

--- a/src/app/components/listing/listing.component.html
+++ b/src/app/components/listing/listing.component.html
@@ -5,7 +5,7 @@
         <hr>
         <div class="row">
             <div class="col-md-6">
-                <!-- put image here -->
+                <img style="width: 100%;" class="thumbnail" src="{{ listing.imageUrl}}">
             </div>
             <div class="col-md-6">
                 <ul class="list-group">
