--- a/src/app/components/add-listing/add-listing.component.html
+++ b/src/app/components/add-listing/add-listing.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-5 col-md-offset-3">
-            <form>
+            <form (submit)="onAddSubmit()">
                 <legend>Add listing</legend>
                 <hr>
                 <div class="form-group">
