fix error in add listing path

--- a/src/app/components/add-listing/add-listing.component.html
+++ b/src/app/components/add-listing/add-listing.component.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="form-group">
                     <label for="">Image</label>
-                    <input type="file" class="form-control" [(ng-model)]="image" name="image" id="image" placeholder="Input image" required>
+                    <input type="file" class="form-control" [(ng-model)]="image" name="image" id="image" placeholder="Input image">
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
             </form>
