--- a/src/app/components/add-listing/add-listing.component.html
+++ b/src/app/components/add-listing/add-listing.component.html
@@ -12,13 +12,17 @@
                     <label for="">City</label>
                     <input type="text" class="form-control" name="city" [(ngModel)]="city" id="city" placeholder="Input city" required>
                 </div>
+                 <div class="form-group">
+                    <label for="">Number of rooms</label>
+                    <input type="text" class="form-control" name="bedrooms" [(ngModel)]="bedrooms" id="bedrooms" placeholder="Input number of bedrooms" required>
+                </div>
                 <div class="form-group">
                     <label for="">Owner</label>
                     <input type="text" class="form-control" name="owner" [(ngModel)]="owner" id="owner" placeholder="Input owner" required>
                 </div>
                 <div class="form-group">
                     <label for="">Type</label>
-                    <select name="type" id="inputType" [(ngModel)]="type" class="form-control" required="required">
+                    <select name="type" id="type" [(ngModel)]="type" class="form-control" required="required">
                         <option value="">Estate</option>
                         <option value="">Condo</option>
                         <option value="">Apartment</option>
