add edit button for editing listing

--- a/src/app/components/listing/listing.component.html
+++ b/src/app/components/listing/listing.component.html
@@ -13,6 +13,7 @@
                     <li class="list-group-item">Owned by: {{listing.owner}}</li>
                     <li class="list-group-item">Price: {{listing.price}}</li>
                 </ul>
+                <button type="button" class="btn btn-info" [routerLink]="['/edit-listing']">Edit</button>
             </div>
         </div>
     </div>
