--- a/src/app/components/edit-listing/edit-listing.component.html
+++ b/src/app/components/edit-listing/edit-listing.component.html
@@ -1,3 +1,43 @@
-<p>
-  edit-listing works!
-</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-5 col-md-offset-3">
+            <form (submit)="onEditSubmit()">
+                <legend>Edit listing</legend>
+                <hr>
+                <div class="form-group">
+                    <label for="">Title</label>
+                    <input type="text" class="form-control" name="title" [(ngModel)]="title" id="title" placeholder="Input title" required>
+                </div>
+                <div class="form-group">
+                    <label for="">City</label>
+                    <input type="text" class="form-control" name="city" [(ngModel)]="city" id="city" placeholder="Input city" required>
+                </div>
+                 <div class="form-group">
+                    <label for="">Number of rooms</label>
+                    <input type="text" class="form-control" name="bedrooms" [(ngModel)]="bedrooms" id="bedrooms" placeholder="Input number of bedrooms" required>
+                </div>
+                <div class="form-group">
+                    <label for="">Owner</label>
+                    <input type="text" class="form-control" name="owner" [(ngModel)]="owner" id="owner" placeholder="Input owner" required>
+                </div>
+                <div class="form-group">
+                    <label for="">Type</label>
+                    <select name="type" id="type" [(ngModel)]="type" class="form-control" required="required">
+                        <option value="">Estate</option>
+                        <option value="">Condo</option>
+                        <option value="">Apartment</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="">Price</label>
+                    <input type="text" class="form-control" [(ngModel)]="price" name="price" id="price" placeholder="Input price" required>
+                </div>
+                <!-- <div class="form-group">
+                    <label for="">Image</label>
+                    <input type="file" class="form-control" [(ngModel)]="image" name="image" id="image" placeholder="Input image">
+                </div> -->
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+    </div>
+</div>
